chore(package-lock): hopefully this works on test app

--- a/package.json
+++ b/package.json
@@ -34,13 +34,13 @@
   "devDependencies": {
     "@commitlint/cli": "^20.1.0",
     "@commitlint/config-conventional": "^20.0.0",
-    "@parcel/packager-ts": "^2.16.0",
+    "@parcel/packager-ts": "^2.16.3",
     "@parcel/transformer-typescript-types": "^2.16.3",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.1",
     "@vitest/browser": "^3.2.4",
     "husky": "^8.0.0",
-    "parcel": "^2.16.0",
+    "parcel": "^2.16.3",
     "playwright": "^1.56.0",
     "rimraf": "^6.0.1",
     "typescript": "^5.9.3",
@@ -49,5 +49,10 @@
   },
   "peerDependencies": {
     "react": "^19.2.0"
+  },
+  "dependencies": {
+    "@lmdb/lmdb-darwin-arm64": "^3.4.4",
+    "@parcel/watcher": "^2.5.6",
+    "@swc/core-darwin-arm64": "^1.15.10"
   }
 }
