--- a/package.json
+++ b/package.json
@@ -45,14 +45,13 @@
     "rimraf": "^6.0.1",
     "typescript": "^5.9.3",
     "vitest": "^3.2.4",
-    "vitest-browser-react": "^1.0.1"
+    "vitest-browser-react": "^1.0.1",
+    "@lmdb/lmdb-darwin-arm64": "^3.4.4",
+    "@parcel/watcher": "^2.5.6",
+    "@swc/core-darwin-arm64": "^1.15.10"
   },
   "peerDependencies": {
     "react": "^19.2.0"
   },
-  "dependencies": {
-    "@lmdb/lmdb-darwin-arm64": "^3.4.4",
-    "@parcel/watcher": "^2.5.6",
-    "@swc/core-darwin-arm64": "^1.15.10"
-  }
+  "dependencies": {}
 }
